una vez más actualizando...

--- a/index.html
+++ b/index.html
@@ -23,15 +23,9 @@
 		<div class="row">
 			<div class="main-menu">
 				<div class="col-md-4">
-					<div class="media">
-						<div class="media-left media middle">
-							<i class="media-object icon ion-map">
-							</i>
-							<div class="media-left media middle">
-							<h4 class="media-heading">PRIMES</h4>
-							</div>
-						</div>
-					</div>
+					
+					<h4 class="media-heading"><span class=""></span>PRIMES</h4>
+							
 				</div>
 				<div class="col-md-8">
 					<ul class="list-nav">
@@ -182,72 +176,140 @@
 	</div>
 <!--fin menu 3-->
 <!--Portafolio-->
-<div class="container">
-	<h1 class="text-center">Portfolio</h1>
-	<p class="text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit, quaerat commodi saepe.</p>
-	<div class="porta-menu">
+<div class="porta-menu">
+	<div class="container">
+		<h1 class="text-center">Portfolio</h1>
+		<p class="text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit, quaerat commodi saepe.</p>
+				<div class="porta">
+					<div class="row">
+						<ul>
+						<div class="col-md-6">	
+							<li><a href="#">
+							<img class="foto" src="img/grid/1a.jpg">
+							<h4>Dash board</h4>
+							<p>Web Design / Graphic</p></a>
+							</li>
+						</div>
+						<div class="col-md-6">
+							<li> <a href="#">
+							<img class="foto" src="img/grid/2a.jpg">	
+							<h4>World Clock Widge</h4>
+							<p>Logo Web / Design</p></a>
+							</li>
+						</div>
+						</ul>
+					</div>
+					<div class="row">
+						<ul>
+						<div class="col-md-6">	
+							<li> <a href="#">
+							<img class="foto" src="img/grid/3a.jpg">
+							<h4>To-Do Dashboard</h4>
+							<p>Graphic / Logo</p></a>
+							</li>
+						</div>
+						<div class="col-md-6">
+							<li> <a href="#">
+							<img class="foto" src="img/grid/4a.jpg">
+							<h4>Event and More</h4>
+							<p>Graphic / Logo</p></a>
+							</li>
+						</div>
+						<ul>
+					</div>
+					<div class="row">
+						<ul>
+						<div class="col-md-6">	
+							<li> <a href="#">
+							<img class="foto" src="img/grid/5a.jpg">
+							<h4>Where To App</h4>
+							<p>Web Design / Identify </p></a>
+							</li>
+						</div>
+						<div class="col-md-6">
+							<li> <a href="#">
+							<img class="foto" src="img/grid/6a.jpg">
+							<h4>Sky * Buddy</h4>
+							<p>Identify / Web design</p></a>
+							</li>
+						</div>
+						</ul>
+					</div>
+				</div>
 	</div>
-
-			<div class="porta">
-				<div class="row">
-					<ul>
-					<div class="col-md-6">	
-						<li><a href="#">
-						<img class="foto" src="img/grid/1a.jpg">
-						<h4>Dash board</h4></a>
-						<p>Web Design / Graphic</p>
-						</li>
-					</div>
-					<div class="col-md-6">
-						<li> <a href="#">
-						<img class="foto" src="img/grid/2a.jpg">	
-						<h4>World Clock Widge</h4></a>
-						<p>Logo Web / Design</p>
-						</li>
-					</div>
-					</ul>
-				</div>
-				<div class="row">
-					<ul>
-					<div class="col-md-6">	
-						<li> <a href="#">
-						<img class="foto" src="img/grid/3a.jpg">
-						<h4>To-Do Dashboard</h4></a>
-						<p>Graphic / Logo</p>
-						</li>
-					</div>
-					<div class="col-md-6">
-						<li> <a href="#">
-						<img class="foto" src="img/grid/4a.jpg">
-						<h4>Event and More</h4></a>
-						<p>Graphic / Logo</p>
-						</li>
-					</div>
-					<ul>
-				</div>
-				<div class="row">
-					<ul>
-					<div class="col-md-6">	
-						<li> <a href="#">
-						<img class="foto" src="img/grid/5a.jpg">
-						<h4>Where To App</h4></a>
-						<p>Web Design / Identify </p>
-						</li>
-					</div>
-					<div class="col-md-6">
-						<li> <a href="#">
-						<img class="foto" src="img/grid/6a.jpg">
-						<h4>Sky * Buddy</h4>
-						<p>Identify / Web design</p></a>
-						</li>
-					</div>
-					<ul>
-				</div>
-
-			
-
-		</div>
 </div><!--cierra container-->
+<div class="fondo2">
+	<div class="container">
+		<h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+		Nesciunt a, culpa illo. </h3>
+		<h3>Mauris uprio sanitis.</h3>
+	</div>
+</div>
+<!--choose package-->
+<div class="package">
+	<div class="container">
+		<h1 class="text-center">Choose the package</h1>
+		<p class="text-center">Recusandae explicabo similique numquam, fugit et repellat rerum repellendus adipisci.</p>
+	</div>
+</div>
+<!--fin package-->
+<!--custom-->
+<div class="container">
+	<div class="costumer">
+		<h1>What our costumers have to say...</h1>
+			<img class="custom" src="img/customer.jpg">
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis expedita quam repudiandae perspiciatis commodi, reiciendis cum, officiis.</p>
+			<h4>Diana Rosswert</h4>
+	</div>
+</div>
+<!--end custom-->
+<!--contact-->
+<div class="fondo3">
+	<div class="container">
+		<div class="contact">
+			<h1>Contact us</h1>
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt omnis doloribus laboriosam explicabo unde.</p>
+			<div class="casillas">	
+				<div class="row">
+					<div class="col-md-6">
+						<div class="columna1">
+							<h2>Send Message</h2>
+							<input class="form-control input-lg" type="text" placeholder="Email">
+							<input class="form-control input-lg" type="text" placeholder="Subject">
+							<input class="form-control input-lg" type="text" placeholder="Message">
+							<button type="button" class="btn btn-submit"><strong><h4>Submit</h4></strong></button>
+						</div>
+					</div>
+					<div class="cold-md-6">
+						<div class="columna2">
+							<h2>About Us</h2>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde, alias corrupti fugit iure, similique suscipit, ducimus laborum, quas beatae porro in fuga laudantium culpa veritatis. Aliquam quidem impedit officiis, at. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus neque veniam inventore est nulla distinctio recusandae laudantium asperiores ea aperiam vero explicabo repudiandae sapiente, aut temporibus omnis, molestias, corporis quaerat.</p>
+							<div class="addres">
+							<h2>Address</h2>
+							<p><span class="ion-ios-location"></span>  13 Brant treet, Burlington, ontario,Canada</p>
+							<p><span class="ion-ios-telephone"></span> Phone: 0011 222 335 7773</p>
+							</div>
+						</div>	
+					</div>
+				</div>	<!--row-->
+			</div>
+		</div>
+	</div>
+</div>
+<!--end contact-->
+<!--start follow-->
+<div class="container">
+	<div class="follow text-center">
+		<h1>Follow us</h1>
+		<p></p>
+		<i class=""
+	
+</div>
+<!--end follow-->
+<!--footer-->
+<div class="footer">
+	
+</div>
 <!--fin de portafolio-->
 
   <!-- Inserta tu código aqui -->
