--- a/index.html
+++ b/index.html
@@ -18,34 +18,36 @@
   <link rel="stylesheet" href="css/main.css"> 
 </head>
 <body>
-<div class="container">
-	<div class="header">
-		<div class="row">
-			<div class="main-menu">
-				<div class="col-md-4">
-					
-					<h4 class="media-heading"><span class=""></span>PRIMES</h4>
-							
+<div class="header-content">
+	<div class="overlay">
+		<div class="container">
+		<div class="main-menu">
+				<div class="row">
+					<div class="col-md-4">
+						<h4 class="media-heading"><span class="ion-ios-star-half"></span>PRIMES</h4>
+					</div>
+					<div class="col-md-8">
+						<ul class="list-nav">
+								<li> <a href="#">Home</a></li>
+								<li> <a href="#">Features</a></li>
+								<li> <a href="#">Portfolio</a></li>
+								<li> <a href="#">Pricing</a></li>
+								<li> <a href="#">Contact</a></li>
+						</ul>
+					</div>
 				</div>
-				<div class="col-md-8">
-					<ul class="list-nav">
-						<li> <a href="#">Home</a></li>
-						<li> <a href="#">Features</a></li>
-						<li> <a href="#">Portfolio</a></li>
-						<li> <a href="#">Pricing</a></li>
-						<li> <a href="#">Contact</a></li>
-					</ul>
+		</div>
+
+				<div class="centro">
+						<h1>Launch your <strong>Business</strong> with <strong>Primes</strong></h1>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam consequatur illum praesentium aliquid quam cupiditate, officia ipsa libero sint provident, voluptatum iusto fugiat asperiores quidem enim velit. Officiis, ratione, quidem.</p>
 				</div>
-			</div><!--mainmenu-->
-		</div><!--row-->
-	</div><!--cierra header-->
+			</div>
+		</div>
+	</div>
 </div>
 
-	<div class="header-content">
-				<h1>Launch your <strong>Business</strong> with <strong>Primes</strong></h1>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam consequatur illum praesentium aliquid quam cupiditate, officia ipsa libero sint provident, voluptatum iusto fugiat asperiores quidem enim velit. Officiis, ratione, quidem.</p>
-	</div>
-	
+<!--menu 2-->
 	<div class="container text-center">
 		<div class="menu2">
 			<div class="row">
@@ -238,13 +240,17 @@
 				</div>
 	</div>
 </div><!--cierra container-->
-<div class="fondo2">
-	<div class="container">
-		<h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
-		Nesciunt a, culpa illo. </h3>
-		<h3>Mauris uprio sanitis.</h3>
+<!--fondo2-->
+<div class="overlay">
+	<div class="fondo2">
+		<div class="container">
+			<h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+			Nesciunt a, culpa illo. </h3>
+			<h3>Mauris uprio sanitis.</h3>
+		</div>
 	</div>
 </div>
+<!--fin fondo 2-->
 <!--choose package-->
 <div class="package">
 	<div class="container">
@@ -265,6 +271,7 @@
 <!--end custom-->
 <!--contact-->
 <div class="fondo3">
+	<div class="overlay">
 	<div class="container">
 		<div class="contact">
 			<h1>Contact us</h1>
@@ -296,18 +303,27 @@
 		</div>
 	</div>
 </div>
+</div>
 <!--end contact-->
 <!--start follow-->
 <div class="container">
 	<div class="follow text-center">
 		<h1>Follow us</h1>
-		<p></p>
-		<i class=""
+		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque pariatur accusantium itaque eos. Alias neque sapiente, officia ex eius quod velit, enim itaque aliquid mollitia vitae nobis sit! Voluptatum, incidunt.</p>
+		<i class="ion-social-facebook"></i>
+		<i class="ion-social-twitter"></i>
+		<i class="ion-social-linkedin"></i>
+		<i class="ion-social-pinterest"></i>
+		<i class="ion-social-googleplus-outline"></i>
+
 	
 </div>
 <!--end follow-->
 <!--footer-->
-<div class="footer">
+<footer>
+<p class="text-center"><small>primes 2015 - laboratoria.la</small></p>
+</footer>
+
 	
 </div>
 <!--fin de portafolio-->
