--- a/index.html
+++ b/index.html
@@ -241,12 +241,15 @@
 	</div>
 </div><!--cierra container-->
 <!--fondo2-->
-<div class="overlay">
-	<div class="fondo2">
+
+<div class="fondo2">
+	<div class="overlay">
 		<div class="container">
-			<h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
-			Nesciunt a, culpa illo. </h3>
-			<h3>Mauris uprio sanitis.</h3>
+			<div class="letra">	
+				<h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+				Nesciunt a, culpa illo. </h3>
+				<h3>Mauris uprio sanitis.</h3>
+			</div>
 		</div>
 	</div>
 </div>
