--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
 		<i class="ion-social-pinterest"></i>
 		<i class="ion-social-googleplus-outline"></i>
 
-	
+	</div>
 </div>
 <!--end follow-->
 <!--footer-->
