--- a/index.html
+++ b/index.html
@@ -21,26 +21,25 @@
 <div class="header-content">
 	<div class="overlay">
 		<div class="container">
-		<div class="main-menu">
+			<div class="main-menu">
 				<div class="row">
 					<div class="col-md-4">
 						<h4 class="media-heading"><span class="ion-ios-star-half"></span>PRIMES</h4>
 					</div>
 					<div class="col-md-8">
 						<ul class="list-nav">
-								<li> <a href="#">Home</a></li>
-								<li> <a href="#">Features</a></li>
-								<li> <a href="#">Portfolio</a></li>
-								<li> <a href="#">Pricing</a></li>
-								<li> <a href="#">Contact</a></li>
+							<li> <a href="#">Home</a></li>
+							<li> <a href="#">Features</a></li>
+							<li> <a href="#">Portfolio</a></li>
+							<li> <a href="#">Pricing</a></li>
+							<li> <a href="#">Contact</a></li>
 						</ul>
 					</div>
 				</div>
-		</div>
-
-				<div class="centro">
-						<h1>Launch your <strong>Business</strong> with <strong>Primes</strong></h1>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam consequatur illum praesentium aliquid quam cupiditate, officia ipsa libero sint provident, voluptatum iusto fugiat asperiores quidem enim velit. Officiis, ratione, quidem.</p>
+			</div>
+			<div class="centro">
+					<h1>Launch your <strong>Business</strong> with <strong>Primes</strong></h1>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam consequatur illum praesentium aliquid quam cupiditate, officia ipsa libero sint provident, voluptatum iusto fugiat asperiores quidem enim velit. Officiis, ratione, quidem.</p>
 				</div>
 			</div>
 		</div>
@@ -259,6 +258,29 @@
 	<div class="container">
 		<h1 class="text-center">Choose the package</h1>
 		<p class="text-center">Recusandae explicabo similique numquam, fugit et repellat rerum repellendus adipisci.</p>
+			<div class="row">
+				<div class="col-md-4">
+					<div class="panel panel-default columna">
+				        <div class="panel-heading">Standar</div>
+				        <div class="panel-body">
+				          <p>From <span class="moneda">$45,</span>.99 per month</p>
+				        </div>
+				        <!-- List group -->
+				        <ul class="list-group">
+				          <li class="list-group-item">Vestibulum est magna</li>
+				          <li class="list-group-item">Dapibus ac facilisis in</li>
+				          <li class="list-group-item">Morbi leo risus</li>
+				          <li class="list-group-item">Porta ac consectetur ac</li>
+				          <li class="list-group-item"><button class="btn btn-primary btn-lg">Purchase</button></li>
+				          <li class="list-group-item"></li>
+				        </ul>
+				      </div>  
+							</div>
+				<div class="col-md-4">
+				</div>
+				<div class="col-md-4">
+				</div>
+			</div>
 	</div>
 </div>
 <!--fin package-->
@@ -270,6 +292,7 @@
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis expedita quam repudiandae perspiciatis commodi, reiciendis cum, officiis.</p>
 			<h4>Diana Rosswert</h4>
 	</div>
+
 </div>
 <!--end custom-->
 <!--contact-->
@@ -289,15 +312,15 @@
 							<input class="form-control input-lg" type="text" placeholder="Message">
 							<button type="button" class="btn btn-submit"><strong><h4>Submit</h4></strong></button>
 						</div>
-					</div>
-					<div class="cold-md-6">
-						<div class="columna2">
-							<h2>About Us</h2>
-							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde, alias corrupti fugit iure, similique suscipit, ducimus laborum, quas beatae porro in fuga laudantium culpa veritatis. Aliquam quidem impedit officiis, at. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus neque veniam inventore est nulla distinctio recusandae laudantium asperiores ea aperiam vero explicabo repudiandae sapiente, aut temporibus omnis, molestias, corporis quaerat.</p>
-							<div class="addres">
-							<h2>Address</h2>
-							<p><span class="ion-ios-location"></span>  13 Brant treet, Burlington, ontario,Canada</p>
-							<p><span class="ion-ios-telephone"></span> Phone: 0011 222 335 7773</p>
+						</div>
+						<div class="cold-md-6">
+							<div class="columna2">
+								<h2>About Us</h2>
+								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde, alias corrupti fugit iure, similique suscipit, ducimus laborum, quas beatae porro in fuga laudantium culpa veritatis. Aliquam quidem impedit officiis, at. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus neque veniam inventore est nulla distinctio recusandae laudantium asperiores ea aperiam vero explicabo repudiandae sapiente, aut temporibus omnis, molestias, corporis quaerat.</p>
+								<div class="addres">
+								<h2>Address</h2>
+								<p><span class="ion-ios-location"></span>  13 Brant treet, Burlington, ontario,Canada</p>
+								<p><span class="ion-ios-telephone"></span> Phone: 0011 222 335 7773</p>
 							</div>
 						</div>	
 					</div>
@@ -305,7 +328,7 @@
 			</div>
 		</div>
 	</div>
-</div>
+	</div>
 </div>
 <!--end contact-->
 <!--start follow-->
@@ -326,7 +349,7 @@
 <footer>
 <p class="text-center"><small>primes 2015 - laboratoria.la</small></p>
 </footer>
-
+Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi quasi vitae consequatur, asperiores, omnis voluptatibus neque cum suscipit aliquam. Quis ipsam quasi, possimus earum omnis placeat repellat ullam nisi doloremque.
 	
 </div>
 <!--fin de portafolio-->
