--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="centro">
+				<div class="centro">
 					<h1>Launch your <strong>Business</strong> with <strong>Primes</strong></h1>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam consequatur illum praesentium aliquid quam cupiditate, officia ipsa libero sint provident, voluptatum iusto fugiat asperiores quidem enim velit. Officiis, ratione, quidem.</p>
 				</div>
@@ -262,9 +262,26 @@
 				<div class="col-md-4">
 					<div class="panel panel-default columna">
 				        <div class="panel-heading">Standar</div>
-				        <div class="panel-body">
-				          <p>From <span class="moneda">$45,</span>.99 per month</p>
-				        </div>
+					        <div class="panel-body">
+					          <p>From <span class="moneda">$45,</span>.99 per month</p>
+					        </div>
+				        <!-- List group -->
+				        <ul class="list-group">
+				          <li class="list-group-item">Vestibulum est magna</li>
+				          <li class="list-group-item">Dapibus ac facilisis in</li>
+				          <li class="list-group-item">Morbi leo risus</li>
+				          <li class="list-group-item">Porta ac consectetur ac</li>
+				          <li class="list-group-item"><button class="btn btn-primary btn-lg">Purchase</button></li>
+				          <li class="list-group-item"></li>
+				        </ul>
+				      	</div>  
+					</div>
+				<div class="col-md-4">
+					<div class="panel panel-default columna">
+				        <div class="panel-heading">Standar</div>
+					        <div class="panel-body">
+					          <p>From <span class="moneda">$45,</span>.99 per month</p>
+					        </div>
 				        <!-- List group -->
 				        <ul class="list-group">
 				          <li class="list-group-item">Vestibulum est magna</li>
@@ -275,11 +292,24 @@
 				          <li class="list-group-item"></li>
 				        </ul>
 				      </div>  
-							</div>
+					</div>
 				<div class="col-md-4">
-				</div>
-				<div class="col-md-4">
-				</div>
+					<div class="panel panel-default columna">
+				        <div class="panel-heading">Standar</div>
+					        <div class="panel-body">
+					          <p>From <span class="moneda">$45,</span>.99 per month</p>
+					        </div>
+				        <!-- List group -->
+				        <ul class="list-group">
+				          <li class="list-group-item">Vestibulum est magna</li>
+				          <li class="list-group-item">Dapibus ac facilisis in</li>
+				          <li class="list-group-item">Morbi leo risus</li>
+				          <li class="list-group-item">Porta ac consectetur ac</li>
+				          <li class="list-group-item"><button class="btn btn-primary btn-lg">Purchase</button></li>
+				          <li class="list-group-item"></li>
+				        </ul>
+				      </div>  
+					</div>
 			</div>
 	</div>
 </div>
@@ -349,7 +379,7 @@
 <footer>
 <p class="text-center"><small>primes 2015 - laboratoria.la</small></p>
 </footer>
-Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi quasi vitae consequatur, asperiores, omnis voluptatibus neque cum suscipit aliquam. Quis ipsam quasi, possimus earum omnis placeat repellat ullam nisi doloremque.
+
 	
 </div>
 <!--fin de portafolio-->
